# poetry-s3-utils

./: .env  README-templ.md  README.md  lookup-data.csv  pyproject.toml
s3_utils/: s3_download.py
