[tool.poetry]
name = "s3-utils"
version = "0.1.0"
description = ""
authors = ["Ramesh Doddi <rdoddi.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.36.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
s3-download = "s3_utils.s3_download:download_files"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
